Tue Jul 02 23:44:48 GMT 2013  Olly Betts <olly@survex.com>

	* api/omdatabase.cc: Add support for WritableDatabase with multiple
	  subdatabases.

Tue Jul 02 23:40:08 GMT 2013  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,tests/api_none.cc: Trying to perform operations on
	  a database with no subdatabases now throws InvalidOperationError not
	  DocNotFoundError.

Tue Jul 02 13:22:31 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* tests/api_weight.cc: Extend checkstatsweight1 to check that
	  Weight::get_collection_freq() returns the same number as
	  Database::get_collection_freq().

Tue Jul 02 05:00:30 GMT 2013  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/omenquireinternal.h,
	  backends/remote/remote-database.cc,backends/remote/remote-database.h,
	  common/remoteprotocol.h,configure.ac,docs/remote_protocol.rst,
	  include/xapian/enquire.h,matcher/multimatch.cc,matcher/multimatch.h,
	  net/remoteserver.cc,tests/api_postingsource.cc: Add
	  Enquire::set_time_limit() method which sets a timelimit after which
	  check_at_least will be disabled.

Mon Jul 01 23:42:33 GMT 2013  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Fix to actually removed cached databases before
	  "make check".

Mon Jul 01 22:21:41 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,api/queryinternal.cc,matcher/valuestreamdocument.h: Revert
	  changes accidentally included in r17373.

Sat Jun 29 12:39:10 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h,unicode/tclUniData.cc: Change
	  Xapian::Unicode::Internal::get_character_info() to simply return
	  Xapian::Unicode::UNASSIGNED for character outside unicode (ch >=
	  0x110000) which avoids a special check for such values before
	  we call get_character_info().

Sat Jun 29 09:31:12 GMT 2013  Olly Betts <olly@survex.com>

	* tests/api_serialise.cc: Remove code from registry* testcases which
	  tries to test the consequences of throwing an exception from a